2023-11-04T16:10:34Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6755878694 # 1313
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-04
* notice: last 14d: unq all: 3 35
* notice: prev accum: outdated-unq outdated-all / unq all: 693 1089 / 715 1127
* notice: next accum: outdated-unq outdated-all / unq all: 694 1092 / 715 1127
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-10-21] / []

2023-11-04T08:10:40Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6753693203 # 1312
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-04
* notice: last 14d: unq all: 3 36
* notice: prev accum: outdated-unq outdated-all / unq all: 693 1089 / 714 1126
* notice: next accum: outdated-unq outdated-all / unq all: 693 1089 / 715 1127
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -2 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-10-21 2023-11-04]

2023-11-04T00:41:29Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6751614668 # 1311
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-04
* notice: last 14d: unq all: 3 37
* notice: prev accum: outdated-unq outdated-all / unq all: 693 1089 / 714 1125
* notice: next accum: outdated-unq outdated-all / unq all: 693 1089 / 714 1126
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [] / [2023-11-03]

2023-11-03T08:11:45Z: