@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-11-04T16:10:34Z",
+  "timestamp" : "2023-11-05T08:10:44Z",
   "count_outdated" : 1092,
   "uniques_outdated" : 694,
-  "count" : 1127,
-  "uniques" : 715,
+  "count" : 1128,
+  "uniques" : 716,
   "clones" : [
     {
       "timestamp": "2023-10-22T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count_decinc": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -124,6 +124,15 @@
     },
     {
       "timestamp": "2023-11-04T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-11-05T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
