@@ -4,7 +4,7 @@
   "clones": [
     {
       "timestamp": "2023-10-22T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -69,6 +69,11 @@
     },
     {
       "timestamp": "2023-11-04T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-11-05T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
