@@ -1,3 +1,12 @@
+2023-11-05T08:10:44Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6760108647 # 1315
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-05
+* notice: last 14d: unq all: 3 35
+* notice: prev accum: outdated-unq outdated-all / unq all: 694 1092 / 715 1127
+* notice: next accum: outdated-unq outdated-all / unq all: 694 1092 / 716 1128
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-10-22 2023-11-05]
+
 2023-11-04T16:10:34Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6755878694 # 1313
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-04
